# lightning-validia

./: .gitignore  CLAUDE.md  DEMO.md  README.md  deploy.sh  hello.txt  package-lock.json  package.json  pipeline.py  schema.sql
.claude/: settings.json
.claudemon/: hook.sh
.github/workflows/: deploy.yml
apps/api/: package.json  schema.sql  wrangler.toml
apps/api/src/: categories.ts  index.ts  seeds.json  shield.ts  sse.ts  types.ts
apps/cli/: package.json  tsconfig.json
apps/cli/src/: index.ts  init.ts
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/landing/: index.html  package.json  style.css  wrangler.toml
apps/monitor/: index.html  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
apps/monitor-api/: package.json  tsconfig.json  wrangler.self-hosted.toml  wrangler.toml
apps/web/: .gitignore  next.config.ts  open-next.config.ts  package.json  wrangler.jsonc
dashboard/: package-lock.json  package.json
dashboard/docs/: ghostapi_example_output.json
designs/: IMG_8743.HEIC  cool.HEIC  filetype-bars-instructions.md
docs/: test_prompts.json  ultraplan.md
evals/: adversarial_evals.json  local_results.json  run_evals.py  test_local.py
ghost-patches/: SETUP.md  ghost.env  lightning-ai-compat.patch
mcp-server/: server.py
skills/paranoid-shield/: SKILL.md
tools/: pipeline.py  precompute-seeds.py
tools/claude-code-hook/: debug-hook-input.sh  openproof-hook.sh
tools/evals/: eval_results.json  run_evals.py  test_local.py
tools/mcp-server/: requirements.txt  server.py
(+50 files in other folders)
