[package]
name = "claudemon-desktop"
version = "0.1.0"
description = "ClaudeMon — Monitor your Claude Code sessions"
authors = ["anipotts"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
